--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,8 @@ venv.bak/
 .mypy_cache/
 speechlm/dataset/LibriSpeech/fast_phone2unit/dict.PHN.txt
 speechlm/dataset/LibriSpeech/fast_phone2unit/dict.phn.txt
+
+
+.idea
+layoutlmv3/examples/object_detection/layoutlmv3-base-finetuned-publaynet
+layoutreader/output
